--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "githubname",
-    "description": "githubname",
+    "name": "esome-zz",
+    "description": "esome-zz",
     "keywords": ["vmess vless trojan shadowsocks socks"],
     "env": {
         "AA": {
